--- a/WebContent/xsamInterface.xhtml
+++ b/WebContent/xsamInterface.xhtml
@@ -89,7 +89,7 @@
 		             	<h:outputText value="Query Result Format" style=" font : bold;"/>
 		             	<h:selectOneRadio value="#{xsamsQuery.queryResultFormat}">
 							<f:selectItem itemLabel="VOTable" itemValue="votable" />
-							<f:selectItem itemLabel="XSAMS" itemValue="xsams" />
+							<f:selectItem itemLabel="XSAMS" itemValue="XSAMS" />
 						</h:selectOneRadio>
 		             </h:panelGrid>
 		            <h:commandButton  value="Submit Query" view="/registryViewer.xhtml"
